# polymarket_arb_bot

./: .env.example  .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/config/: mod.rs
src/execution/: mod.rs  orders.rs  signer.rs
src/market_data/: mod.rs  parser.rs  websocket.rs
src/monitoring/: mod.rs  widgets.rs
src/risk/: kill_switch.rs  mod.rs
src/strategy/: arbitrage.rs  fee.rs  mod.rs  order_book.rs
src/utils/: mod.rs
